fix: long titles overlapping header on report/experiment pages

--- a/packages/front-end/components/Layout/TopNav.module.scss
+++ b/packages/front-end/components/Layout/TopNav.module.scss
@@ -13,6 +13,7 @@ $sidebarwidth: 240px;
   background-color: var(--color-surface-solid);
   box-shadow: 0px 0px 1px 0px var(--border-color-200);
   padding: 0 16px;
+  overflow: hidden;
   @media (max-width: 520px) {
     padding: 0 8px;
   }
